--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Web Studio</title>
   </head>
+
   <body>
-    <header>
+    <header class="header-style">
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html">
+          <span class="logo-web">Web</span
+          ><span class="logo-studio">Studio</span>
+        </a>
         <ul>
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li><a class="body-medium" href="#">Studio</a></li>
+          <li><a class="body-medium" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="body-medium" href="#">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -26,9 +37,9 @@
 
     <main>
       <!--main section   Effective Solutions for Your Business-->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero-section">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-button" type="button">Order Service</button>
       </section>
 
       <!--Section 2- our advantages-->
@@ -36,28 +47,28 @@
         <h2 hidden>Our advantages</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h3 class="card-titles">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="card-titles">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="card-titles">Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="card-titles">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
