--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Web Studio</title>
+    <title>WebStudio</title>
   </head>
 
   <body>
@@ -22,15 +22,23 @@
           ><span class="logo-studio">Studio</span>
         </a>
         <ul>
-          <li><a class="body-medium" href="#">Studio</a></li>
-          <li><a class="body-medium" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="body-medium" href="#">Contacts</a></li>
+          <li><a class="nav-links" href="#">Studio</a></li>
+          <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="nav-links" href="#">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a class="header-contacts" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="header-contacts" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
@@ -79,7 +87,7 @@
 
       <!--Section What are we doing-->
       <section>
-        <h2>What are we doing</h2>
+        <h2 class="section-titles">What are we doing</h2>
         <ul>
           <li>
             <img
@@ -109,8 +117,8 @@
       </section>
 
       <!--section our team-->
-      <section>
-        <h2>Our Team</h2>
+      <section class="section-team">
+        <h2 class="section-titles">Our Team</h2>
         <ul>
           <li>
             <img
@@ -119,8 +127,8 @@
               height="260"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="card-titles team">Mark Guerrero</h3>
+            <p class="card-description">Product Designer</p>
           </li>
           <li>
             <img
@@ -129,8 +137,8 @@
               height="260"
               width="264"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="card-titles team">Tom Ford</h3>
+            <p class="card-description">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -139,8 +147,8 @@
               height="260"
               width="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="card-titles team">Camila Garcia</h3>
+            <p class="card-description">Marketing</p>
           </li>
 
           <li>
@@ -150,16 +158,19 @@
               height="260"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="card-titles team">Daniel Wilson</h3>
+            <p class="card-description">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <!--footer-->
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+      <a href="./index.html"
+        ><span class="logo-web">Web</span
+        ><span class="logo-studio logo-footer">Studio</span></a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
