--- a/portfolio.html
+++ b/portfolio.html
@@ -11,13 +11,37 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    />
-
     <title>Portfolio-Web Studio</title>
   </head>
 
   <body>
-    <header></header>
+    <header class="header-style">
+      <nav>
+        <a href="./index.html">
+          <span class="logo-web">Web</span
+          ><span class="logo-studio">Studio</span>
+        </a>
+        <ul>
+          <li><a class="nav-links" href="#">Studio</a></li>
+          <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="nav-links" href="#">Contacts</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li>
+            <a class="header-contacts" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="header-contacts" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
+    </header>
 
     <main>
       <section>
@@ -34,12 +58,12 @@
         <ul>
           <li>
             <img
-              src="./images_portfolio_page/img-1-Bank app.jpg"
+              src="./images_portfolio_page/img-1-bank-app.jpg"
               alt="Banking App Interface"
               width="360"
               height="300"
             />
-            <h2>Banking App Interface Concept</h2>
+            <h2 class="card-titles">Banking App Interface Concept</h2>
             <p>App</p>
           </li>
           <li>
@@ -49,7 +73,7 @@
               width="360"
               height="300"
             />
-            <h2>Cashless Payment</h2>
+            <h2 class="card-titles">Cashless Payment</h2>
             <p>Marketing</p>
           </li>
           <li>
@@ -59,7 +83,7 @@
               width="360"
               height="300"
             />
-            <h2>Meditation App</h2>
+            <h2 class="card-titles">Meditation App</h2>
             <p>App</p>
           </li>
           <li>
@@ -69,7 +93,7 @@
               width="360"
               height="300"
             />
-            <h2>Taxi Service</h2>
+            <h2 class="card-titles">Taxi Service</h2>
             <p>Marketing</p>
           </li>
           <li>
@@ -79,7 +103,7 @@
               width="360"
               height="300"
             />
-            <h2>Screen Illustrations</h2>
+            <h2 class="card-titles">Screen Illustrations</h2>
             <p>Design</p>
           </li>
           <li>
@@ -89,7 +113,7 @@
               width="360"
               height="300"
             />
-            <h2>Online Courses</h2>
+            <h2 class="card-titles">Online Courses</h2>
             <p>Marketing</p>
           </li>
           <li>
@@ -99,7 +123,7 @@
               width="360"
               height="300"
             />
-            <h2>Instagram Stories Concept</h2>
+            <h2 class="card-titles">Instagram Stories Concept</h2>
             <p>Design</p>
           </li>
           <li>
@@ -109,7 +133,7 @@
               width="360"
               height="300"
             />
-            <h2>Organic Food</h2>
+            <h2 class="card-titles">Organic Food</h2>
             <p>Web Site</p>
           </li>
           <li>
@@ -119,13 +143,23 @@
               width="360"
               height="300"
             />
-            <h2>Fresh Coffee</h2>
+            <h2 class="card-titles">Fresh Coffee</h2>
             <p>Web Site</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer></footer>
+    <!--footer-->
+    <footer class="footer">
+      <a href="./index.html"
+        ><span class="logo-web">Web</span
+        ><span class="logo-studio logo-footer">Studio</span></a
+      >
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
