+css portfolio buttons

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,11 +48,15 @@
         <h1 hidden>Projects</h1>
         <!-- buttons-portfolio page -->
         <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+          <li><button class="section-buttons" type="button">All</button></li>
+          <li>
+            <button class="section-buttons" type="button">Web Site</button>
+          </li>
+          <li><button class="section-buttons" type="button">App</button></li>
+          <li><button class="section-buttons" type="button">Design</button></li>
+          <li>
+            <button class="section-buttons" type="button">Marketing</button>
+          </li>
         </ul>
         <!-- Projects-portfolio page -->
         <ul>
