css file changed

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
@@ -22,7 +22,7 @@
           ><span class="logo-studio">Studio</span>
         </a>
         <ul>
-          <li><a class="nav-links" href="#">Studio</a></li>
+          <li><a class="nav-links" href="./index.html">Studio</a></li>
           <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
           <li><a class="nav-links" href="#">Contacts</a></li>
         </ul>
