--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           ><span class="logo-studio">Studio</span>
         </a>
         <ul>
-          <li><a class="nav-links" href="#">Studio</a></li>
+          <li><a class="nav-links" href="./index.html">Studio</a></li>
           <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
           <li><a class="nav-links" href="#">Contacts</a></li>
         </ul>
@@ -52,8 +52,8 @@
 
       <!--Section 2- our advantages-->
       <section>
-        <h2 hidden>Our advantages</h2>
-        <ul>
+        <h2 class="section-titles" hidden>Our advantages</h2>
+        <ul class="list">
           <li>
             <h3 class="card-titles">Strategy</h3>
             <p>
