--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
   <body>
     <header class="header-style">
       <nav>
-        <a href="./index.html">
-          <span class="logo-web">Web</span
-          ><span class="logo-studio">Studio</span>
+        <a class="list logo-web" href="./index.html">
+          Web<span class="logo-studio-dark">Studio</span>
         </a>
         <ul>
           <li><a class="nav-links" href="./index.html">Studio</a></li>
@@ -167,9 +166,8 @@
 
     <!--footer-->
     <footer class="footer">
-      <a href="./index.html"
-        ><span class="logo-web">Web</span
-        ><span class="logo-studio logo-footer">Studio</span></a
+      <a class="list logo-web" href="./index.html"
+        >Web<span class="logo-studio-light">Studio</span></a
       >
       <p>
         Increase the flow of customers and sales for your business with digital
