--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
   <body>
     <header class="header-style">
       <nav>
-        <a class="list logo-web" href="./index.html">
+        <a class="link logo-web" href="./index.html">
           Web<span class="logo-studio-dark">Studio</span>
         </a>
         <ul>
@@ -155,7 +155,7 @@
 
     <!--footer-->
     <footer class="footer">
-      <a class="list logo-web" href="./index.html"
+      <a class="link logo-web" href="./index.html"
         >Web<span class="logo-studio-light">Studio</span></a
       >
       <p>
