--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <a class="link logo-web" href="./index.html">
           Web<span class="logo-studio-dark">Studio</span>
         </a>
-        <ul>
+        <ul class="list">
           <li><a class="nav-links" href="./index.html">Studio</a></li>
           <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
           <li><a class="nav-links" href="#">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="list">
           <li>
             <a class="header-contacts" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -87,7 +87,7 @@
       <!--Section What are we doing-->
       <section>
         <h2 class="section-titles">What are we doing</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images_main_page/computer.jpg"
@@ -118,7 +118,7 @@
       <!--section our team-->
       <section class="section-team">
         <h2 class="section-titles">Our Team</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images_main_page/mark_guerrero_product_des.jpg"
