--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <a class="link logo-web" href="./index.html">
           Web<span class="logo-studio-dark">Studio</span>
         </a>
-        <ul>
+        <ul class="list">
           <li><a class="nav-links" href="./index.html">Studio</a></li>
           <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
           <li><a class="nav-links" href="#">Contacts</a></li>
@@ -46,7 +46,7 @@
       <section>
         <h1 hidden>Projects</h1>
         <!-- buttons-portfolio page -->
-        <ul>
+        <ul class="list">
           <li><button class="section-buttons" type="button">All</button></li>
           <li>
             <button class="section-buttons" type="button">Web Site</button>
