--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
           <li><a class="nav-links" href="#">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="header-contacts">
         <ul class="list">
           <li>
-            <a class="header-contacts" href="mailto:info@devstudio.com"
+            <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="header-contacts" href="tel:+110001111111"
+            <a class="link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -55,28 +55,28 @@
         <ul class="list">
           <li>
             <h3 class="card-titles">Strategy</h3>
-            <p>
+            <p class="card-description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3 class="card-titles">Punctuality</h3>
-            <p>
+            <p class="card-description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3 class="card-titles">Diligence</h3>
-            <p>
+            <p class="card-description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3 class="card-titles">Technologies</h3>
-            <p>
+            <p class="card-description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
