--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </ul>
       </section>
 
-      <!--Section What are we doing-->
+      <!--Section 3 What are we doing-->
       <section>
         <h2 class="section-titles">What are we doing</h2>
         <ul class="list">
@@ -115,7 +115,7 @@
         </ul>
       </section>
 
-      <!--section our team-->
+      <!--section 4 our team-->
       <section class="section-team">
         <h2 class="section-titles">Our Team</h2>
         <ul class="list">
@@ -169,7 +169,7 @@
       <a class="link logo-web" href="./index.html"
         >Web<span class="logo-studio-light">Studio</span></a
       >
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
