--- a/portfolio.html
+++ b/portfolio.html
@@ -26,15 +26,15 @@
           <li><a class="nav-links" href="#">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
+      <address class="header-contacts">
+        <ul class="list">
           <li>
-            <a class="header-contacts" href="mailto:info@devstudio.com"
+            <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="header-contacts" href="tel:+110001111111"
+            <a class="link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -58,107 +58,107 @@
           </li>
         </ul>
         <!-- Projects-portfolio page -->
-        <ul>
+        <ul class="list">
           <li>
-            <img
+            <a class="link"><img
               src="./images_portfolio_page/img-1-bank-app.jpg"
               alt="Banking App Interface"
               width="360"
               height="300"
-            />
-            <h2 class="card-titles">Banking App Interface Concept</h2>
-            <p>App</p>
+            /><h2 class="card-titles">Banking App Interface Concept</h2>
+            <p>App</p></a>
+            
           </li>
           <li>
-            <img
+            <a class="link" href=""><img
               src="./images_portfolio_page/img-2-scan.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
-            />
-            <h2 class="card-titles">Cashless Payment</h2>
-            <p>Marketing</p>
+            /><h2 class="card-titles">Cashless Payment</h2>
+            <p>Marketing</p></a>
+            
           </li>
           <li>
-            <img
+            <a class="link" href=""><img
               src="./images_portfolio_page/img-3-return.jpg"
               alt="Phone and laptop"
               width="360"
               height="300"
             />
             <h2 class="card-titles">Meditation App</h2>
-            <p>App</p>
+            <p>App</p></a>
           </li>
           <li>
-            <img
+            <a class="link" href=""><img
               src="./images_portfolio_page/img-4-car.jpg"
               alt="Taxi"
               width="360"
               height="300"
             />
             <h2 class="card-titles">Taxi Service</h2>
-            <p>Marketing</p>
+            <p>Marketing</p></a>
           </li>
           <li>
-            <img
+            <a class="link" href=""><img
               src="./images_portfolio_page/img-5-phone.jpg"
               alt="Screens"
               width="360"
               height="300"
             />
             <h2 class="card-titles">Screen Illustrations</h2>
-            <p>Design</p>
+            <p>Design</p></a>
           </li>
           <li>
-            <img
+            <a class="link" href=""><img
               src="./images_portfolio_page/img-6-girl.jpg"
               alt="Girl with phone"
               width="360"
               height="300"
             />
             <h2 class="card-titles">Online Courses</h2>
-            <p>Marketing</p>
+            <p>Marketing</p></a>
           </li>
           <li>
-            <img
+            <a class="link" href=""><img
               src="./images_portfolio_page/img-7-storie.jpg"
               alt="Instagram Stories"
               width="360"
               height="300"
             />
             <h2 class="card-titles">Instagram Stories Concept</h2>
-            <p>Design</p>
+            <p>Design</p></a>
           </li>
           <li>
-            <img
+            <a class="link" href=""><img
               src="./images_portfolio_page/img-8-food.jpg"
               alt="Women with fruits"
               width="360"
               height="300"
             />
             <h2 class="card-titles">Organic Food</h2>
-            <p>Web Site</p>
+            <p>Web Site</p></a>
           </li>
           <li>
-            <img
+            <a class="link" href=""><img
               src="./images_portfolio_page/img-9-coffee.jpg"
               alt="Coffee in cup"
               width="360"
               height="300"
             />
             <h2 class="card-titles">Fresh Coffee</h2>
-            <p>Web Site</p>
+            <p>Web Site</p></a>
           </li>
         </ul>
       </section>
     </main>
 
     <!--footer-->
-    <footer class="footer">
+     <footer class="footer">
       <a class="link logo-web" href="./index.html"
         >Web<span class="logo-studio-light">Studio</span></a
       >
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
