--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <body>
     <header class="header-style">
       <nav>
-        <a class="link logo-web" href="./index.html">
+        <a class="logo-web link" href="./index.html">
           Web<span class="logo-studio-dark">Studio</span>
         </a>
         <ul class="list">
           <li><a class="nav-links" href="./index.html">Studio</a></li>
           <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="nav-links" href="#">Contacts</a></li>
+          <li><a class="nav-links" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-contacts">
@@ -34,9 +34,7 @@
             >
           </li>
           <li>
-            <a class="link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -121,6 +119,7 @@
         <ul class="list">
           <li>
             <img
+              class="card"
               src="./images_main_page/mark_guerrero_product_des.jpg"
               alt="Mark Guerrero"
               height="260"
@@ -131,6 +130,7 @@
           </li>
           <li>
             <img
+              class="card"
               src="./images_main_page/tom_ford_frontend_dev.jpg"
               alt="Tom Ford"
               height="260"
@@ -141,6 +141,7 @@
           </li>
           <li>
             <img
+              class="card"
               src="./images_main_page/camila_garcia_Marketing.jpg"
               alt="Camila Garcia"
               height="260"
@@ -152,6 +153,7 @@
 
           <li>
             <img
+              class="card"
               src="./images_main_page/daniel_wilson_ui_des.jpg"
               alt="Daniel Wilson"
               height="260"
