--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
         <ul class="list">
           <li><a class="nav-links" href="./index.html">Studio</a></li>
           <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="nav-links" href="#">Contacts</a></li>
+          <li><a class="nav-links" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-contacts">
@@ -66,7 +66,7 @@
               width="360"
               height="300"
             /><h2 class="card-titles">Banking App Interface Concept</h2>
-            <p>App</p></a>
+            <p class="card-titles">App</p></a>
             
           </li>
           <li>
@@ -76,7 +76,7 @@
               width="360"
               height="300"
             /><h2 class="card-titles">Cashless Payment</h2>
-            <p>Marketing</p></a>
+            <p class="card-titles">Marketing</p></a>
             
           </li>
           <li>
@@ -87,7 +87,7 @@
               height="300"
             />
             <h2 class="card-titles">Meditation App</h2>
-            <p>App</p></a>
+            <p class="card-titles">App</p></a>
           </li>
           <li>
             <a class="link" href=""><img
@@ -97,7 +97,7 @@
               height="300"
             />
             <h2 class="card-titles">Taxi Service</h2>
-            <p>Marketing</p></a>
+            <p class="card-titles">Marketing</p></a>
           </li>
           <li>
             <a class="link" href=""><img
@@ -107,7 +107,7 @@
               height="300"
             />
             <h2 class="card-titles">Screen Illustrations</h2>
-            <p>Design</p></a>
+            <p class="card-titles">Design</p></a>
           </li>
           <li>
             <a class="link" href=""><img
@@ -117,7 +117,7 @@
               height="300"
             />
             <h2 class="card-titles">Online Courses</h2>
-            <p>Marketing</p></a>
+            <p class="card-titles">Marketing</p></a>
           </li>
           <li>
             <a class="link" href=""><img
@@ -127,7 +127,7 @@
               height="300"
             />
             <h2 class="card-titles">Instagram Stories Concept</h2>
-            <p>Design</p></a>
+            <p class="card-titles">Design</p></a>
           </li>
           <li>
             <a class="link" href=""><img
@@ -137,7 +137,7 @@
               height="300"
             />
             <h2 class="card-titles">Organic Food</h2>
-            <p>Web Site</p></a>
+            <p class="card-titles">Web Site</p></a>
           </li>
           <li>
             <a class="link" href=""><img
@@ -147,7 +147,7 @@
               height="300"
             />
             <h2 class="card-titles">Fresh Coffee</h2>
-            <p>Web Site</p></a>
+            <p class="card-titles">Web Site</p></a>
           </li>
         </ul>
       </section>
