--- a/portfolio.html
+++ b/portfolio.html
@@ -21,9 +21,9 @@
           Web<span class="logo-studio-dark">Studio</span>
         </a>
         <ul class="list">
-          <li><a class="nav-links" href="./index.html">Studio</a></li>
-          <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="nav-links" href="">Contacts</a></li>
+          <li><a class="link nav-links" href="./index.html">Studio</a></li>
+          <li><a class="link nav-links" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="link nav-links" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-contacts">
