--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <body>
     <header class="header-style">
       <nav>
-        <a class="logo-web link" href="./index.html">
+        <a class="link logo-web" href="./index.html">
           Web<span class="logo-studio-dark">Studio</span>
         </a>
         <ul class="list">
-          <li><a class="nav-links" href="./index.html">Studio</a></li>
-          <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="nav-links" href="">Contacts</a></li>
+          <li><a class="link nav-links" href="./index.html">Studio</a></li>
+          <li><a class="link nav-links" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="link nav-links" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-contacts">
@@ -34,7 +34,9 @@
             >
           </li>
           <li>
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -117,9 +119,8 @@
       <section class="section-team">
         <h2 class="section-titles">Our Team</h2>
         <ul class="list">
-          <li>
+          <li class="card">
             <img
-              class="card"
               src="./images_main_page/mark_guerrero_product_des.jpg"
               alt="Mark Guerrero"
               height="260"
@@ -128,9 +129,8 @@
             <h3 class="card-titles team">Mark Guerrero</h3>
             <p class="card-description">Product Designer</p>
           </li>
-          <li>
+          <li class="card">
             <img
-              class="card"
               src="./images_main_page/tom_ford_frontend_dev.jpg"
               alt="Tom Ford"
               height="260"
@@ -139,9 +139,8 @@
             <h3 class="card-titles team">Tom Ford</h3>
             <p class="card-description">Frontend Developer</p>
           </li>
-          <li>
+          <li class="card">
             <img
-              class="card"
               src="./images_main_page/camila_garcia_Marketing.jpg"
               alt="Camila Garcia"
               height="260"
@@ -151,9 +150,8 @@
             <p class="card-description">Marketing</p>
           </li>
 
-          <li>
+          <li class="card">
             <img
-              class="card"
               src="./images_main_page/daniel_wilson_ui_des.jpg"
               alt="Daniel Wilson"
               height="260"
