--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
           <li><a class="link nav-links" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address class="header-contacts">
+      <address class="adress">
         <ul class="list">
           <li>
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="link header-contacts" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="link" href="tel:+110001111111"
+            <a class="link header-contacts" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
