--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <header class="header-style">
+     <header class="header-style">
       <nav>
         <a class="link logo-web" href="./index.html">
           Web<span class="logo-studio-dark">Studio</span>
@@ -26,15 +26,15 @@
           <li><a class="link nav-links" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address class="header-contacts">
+      <address class="adress">
         <ul class="list">
           <li>
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="link header-contacts" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="link" href="tel:+110001111111"
+            <a class="link header-contacts" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
