--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               width="264"
             />
             <h3 class="card-titles team">Mark Guerrero</h3>
-            <p class="card-description">Product Designer</p>
+            <p class="card-description team">Product Designer</p>
           </li>
           <li class="card">
             <img
@@ -137,7 +137,7 @@
               width="264"
             />
             <h3 class="card-titles team">Tom Ford</h3>
-            <p class="card-description">Frontend Developer</p>
+            <p class="card-description team">Frontend Developer</p>
           </li>
           <li class="card">
             <img
@@ -147,7 +147,7 @@
               width="264"
             />
             <h3 class="card-titles team">Camila Garcia</h3>
-            <p class="card-description">Marketing</p>
+            <p class="card-description team">Marketing</p>
           </li>
 
           <li class="card">
@@ -158,7 +158,7 @@
               width="264"
             />
             <h3 class="card-titles team">Daniel Wilson</h3>
-            <p class="card-description">UI Designer</p>
+            <p class="card-description team">UI Designer</p>
           </li>
         </ul>
       </section>
